# rf-analysis-tools

./: .gitignore  README.MD  pyproject.toml
notebook/: C12_024_I_round2.ipynb  C12_025_I_amine.ipynb  Draft_Fit.ipynb  Draft_Fit_Gubi.ipynb  Gubi-Sheet_resistance_measurement-Copy1.ipynb  Gubi-cavity_resonance_harmonic.ipynb  Play_C12_fit_hanger_res-Gubi.ipynb  advanced.ipynb  cavity_resonance_harmonic.ipynb  detection_v1.ipynb  example.ipynb  pandas_and_circlefit.ipynb  pandas_circlefit_C12_36_I copy.ipynb  pandas_circlefit_C12_36_I3++.ipynb  pandas_circlefit_C12_36_I_post_oeone_cleaning.ipynb  pandas_circlefit_template.ipynb  pandas_circlefit_testv1.ipynb
notebook/Archived_old_notebook_scripts/: C12_30_I.csv  C12_30_I_6.csv  Draft_Fit.ipynb  Gubi_cavity_noise_part1_notouch.ipynb  Gubi_cavity_noise_part2_notouch.ipynb  Gubi_cavity_noise_part3_notouch.ipynb  Play_C12_fit_hanger_res-Gubi.ipynb  advanced.ipynb  pandas_circlefit_C12_36_I.ipynb  pandas_circlefit_C12_36_I3++.ipynb  pandas_circlefit_C12_36_I_post_oeone_cleaning.ipynb  pandas_circlefit_testv1.ipynb
notebook/fitting/examples/: reflection_port_example.py
notebook/old_archived_fitting_routines/examples/: pandas_and_circlefit.ipynb  (+3 more)
resonator_tools/: circuit.py
resonator_tools2/examples/: KerrReflectionFitter.ipynb  KerrShuntFitter.ipynb  LinearReflectionFitter.ipynb  LinearShuntFitter.ipynb  advanced.ipynb  basic.ipynb  readme.ipynb
src/: ai_generated_cavity_analyzer.py  cavity_detection.py
src/resonator/: circuit.py  kerr.py  reflection.py
src/rf_analysis_tools/: __init__.py  c12_custom_probst.py  cavity_data_handling.py  cavity_detection.py  cavity_fitting.py  data_visualization.py  utils.py
