[tool.poetry]
name = "rf-analysis-tools"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"
package-mode = true
packages = [{ include = "rf_analysis_tools", from = "src" },{ include = "resonator", from = "src" }]



# Packages
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scraps = "^0.5.2"
qcodes = "0.50"
pdata = "^0.1.0"
ipython = "^8.29.0"
jupyter = "^1.1.1"
deprecated = "^1.2.14"
numpy = "^1.23.3"
serial = "^0.0.97"
pyserial = "^3.5"
matplotlib = "3.10"
holoviews = "^1.15.4"  # Plotting tools


[tool.poetry.group.dev.dependencies]
jupyterlab = "4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
